--- a/style.css
+++ b/style.css
@@ -11,25 +11,44 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  background: #0F0F0F;
+  background: #f6f7fb;
 }
-
+::selection {
+  color: #fff;
+  background-color: #7d2ae8;
+}
 .container {
   padding: 2rem 7rem;
   border-radius: 14px;
-  background: #f6f7fb;
+  background: #fff;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
 }
-
-.result-images {
+.result_images {
   display: flex;
   column-gap: 7rem;
 }
-
-.result-images img{
-  width: 100px;
+.container.start .user_result {
+  transform-origin: left;
+  animation: userShake 0.7s ease infinite;
+}
+@keyframes userShake {
+  50% {
+    transform: rotate(10deg);
+  }
 }
 
+.container.start .cpu_result {
+  transform-origin: right;
+  animation: cpuShake 0.7s ease infinite;
+}
+@keyframes cpuShake {
+  50% {
+    transform: rotate(-10deg);
+  }
+}
+.result_images img {
+  width: 100px;
+}
 .result {
   text-align: center;
   font-size: 2rem;
@@ -37,37 +56,38 @@ body {
   margin-top: 1.5rem;
 }
 
-.options-img {
+.option_image img {
+  width: 50px;
+}
+.option_images {
   display: flex;
   align-items: center;
   margin-top: 2.5rem;
   justify-content: space-between;
 }
-
-.opt-img {
+.container.start .option_images {
+  pointer-events: none;
+}
+.option_image {
   display: flex;
   flex-direction: column;
   align-items: center;
-  cursor: pointer;
   opacity: 0.5;
+  cursor: pointer;
   transition: opacity 0.3s ease;
 }
-
-.opt-img:hover {
+.option_image:hover {
   opacity: 1;
 }
-
-.opt-img.active {
+.option_image.active {
   opacity: 1;
 }
-
-.opt-img p{
+.option_image img {
+  pointer-events: none;
+}
+.option_image p {
   color: #0F0F0F;
   font-size: 1.235rem;
   margin-top: 1rem;
   pointer-events: none;
-}
-
-.opt-img img{
-  width: 50px;
 }
