--- a/style.css
+++ b/style.css
@@ -13,42 +13,50 @@ body {
   justify-content: center;
   background: #f6f7fb;
 }
+
 ::selection {
   color: #fff;
   background-color: #7d2ae8;
 }
+
 .container {
   padding: 2rem 7rem;
   border-radius: 14px;
   background: #fff;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
 }
-.result_images {
+
+.result-images {
   display: flex;
   column-gap: 7rem;
 }
-.container.start .user_result {
+
+.container.start .user-result {
   transform-origin: left;
   animation: userShake 0.7s ease infinite;
 }
+
 @keyframes userShake {
   50% {
-    transform: rotate(10deg);
+    transform: translateX(15px);
   }
 }
 
-.container.start .cpu_result {
+.container.start .cpu-result {
   transform-origin: right;
   animation: cpuShake 0.7s ease infinite;
 }
+
 @keyframes cpuShake {
   50% {
-    transform: rotate(-10deg);
+    transform: translateX(-15px);
   }
 }
-.result_images img {
+
+.result-images img {
   width: 100px;
 }
+
 .result {
   text-align: center;
   font-size: 2rem;
@@ -56,19 +64,22 @@ body {
   margin-top: 1.5rem;
 }
 
-.option_image img {
+.option-image img {
   width: 50px;
 }
-.option_images {
+
+.option-images {
   display: flex;
   align-items: center;
   margin-top: 2.5rem;
   justify-content: space-between;
 }
-.container.start .option_images {
+
+.container.start .option-images {
   pointer-events: none;
 }
-.option_image {
+
+.option-image {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -76,16 +87,20 @@ body {
   cursor: pointer;
   transition: opacity 0.3s ease;
 }
-.option_image:hover {
+
+.option-image:hover {
   opacity: 1;
 }
-.option_image.active {
+
+.option-image.active {
   opacity: 1;
 }
-.option_image img {
+
+.option-image img {
   pointer-events: none;
 }
-.option_image p {
+
+.option-image p {
   color: #0F0F0F;
   font-size: 1.235rem;
   margin-top: 1rem;
